docs: 清理冗余文档并优化配置文件
- 更新 .env.example 以反映新的分层同步配置
- 更新 .gitignore 并新增 .geminiignore
- 移除已废弃的文件：CLAUDE.md, audit_db.py, MIGRATION_SCHEDULE.md, review.md
- 更新 docs/data.md 以匹配最新的分层调度和数据架构

--- a/.env.example
+++ b/.env.example
@@ -59,10 +59,6 @@ EMBEDDING_OPENAI_DIMENSION=1536
 # EMBEDDING_OLLAMA_MODEL=nomic-embed-text
 # EMBEDDING_OLLAMA_DIMENSION=768
 
-# 数据清理配置
-NEWS_RETENTION_DAYS=90
-NEWS_CLEANUP_PROTECT_WATCHLIST=true
-
 # 分层调度策略配置
 
 # L1 - 日更组：收盘后统一同步时间（格式：HH:MM，24小时制）
@@ -90,10 +86,15 @@ SYNC_FINANCIAL_DAY_OF_WEEK=6
 SYNC_FINANCIAL_HOUR=20
 SYNC_FINANCIAL_MINUTE=0
 
-# 新闻清理（默认：每周一凌晨 2:00）
+# 新闻数据清理任务
+# --------------------
+# 调度：每周一凌晨 2:00 执行
 CLEANUP_NEWS_DAY_OF_WEEK=0
 CLEANUP_NEWS_HOUR=2
 CLEANUP_NEWS_MINUTE=0
+# 策略：保留最近 90 天数据，且永远保护自选股相关新闻
+NEWS_RETENTION_DAYS=90
+NEWS_CLEANUP_PROTECT_WATCHLIST=true
 
 # 日志配置
 LOG_LEVEL=INFO
