feat: add minute quotes sync to L2, stock list sync to L1, and configurable health check

--- a/.env.example
+++ b/.env.example
@@ -96,6 +96,10 @@ CLEANUP_NEWS_MINUTE=0
 NEWS_RETENTION_DAYS=90
 NEWS_CLEANUP_PROTECT_WATCHLIST=true
 
+# 健康检查配置
+HEALTH_CHECK_HOUR=9
+HEALTH_CHECK_MINUTE=0
+
 # 日志配置
 LOG_LEVEL=INFO
 LOG_FORMAT=json
