chore: remove OpenAI embedding provider, update vector dimension to 1024, and optimize news sync logic

--- a/.env.example
+++ b/.env.example
@@ -41,18 +41,13 @@ OLLAMA_BASE_URL=http://localhost:11434
 OLLAMA_MODEL=qwen2.5:14b
 
 # 向量服务配置（独立于 LLM）
-EMBEDDING_PROVIDER=openai  # 可选：openai, siliconflow, ollama
-
-# OpenAI 向量配置
-EMBEDDING_OPENAI_API_KEY=your_openai_api_key
-EMBEDDING_OPENAI_MODEL=text-embedding-3-small
-EMBEDDING_OPENAI_DIMENSION=1536
+EMBEDDING_PROVIDER=siliconflow  # 可选：siliconflow, ollama
 
 # SiliconFlow 向量配置（可选）
-# EMBEDDING_SILICONFLOW_API_KEY=your_siliconflow_api_key
-# EMBEDDING_SILICONFLOW_BASE_URL=https://api.siliconflow.cn/v1
-# EMBEDDING_SILICONFLOW_MODEL=BAAI/bge-large-zh-v1.5
-# EMBEDDING_SILICONFLOW_DIMENSION=1024
+EMBEDDING_SILICONFLOW_API_KEY=sk-***
+EMBEDDING_SILICONFLOW_BASE_URL=https://api.siliconflow.cn/v1
+EMBEDDING_SILICONFLOW_MODEL=BAAI/bge-m3
+EMBEDDING_SILICONFLOW_DIMENSION=1024
 
 # Ollama 向量配置（可选）
 # EMBEDDING_OLLAMA_BASE_URL=http://localhost:11434
