--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -61,6 +61,14 @@ services:
       - OPENAI_MODEL=${OPENAI_MODEL:-gpt-4-turbo-preview}
       - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://localhost:11434}
       - OLLAMA_MODEL=${OLLAMA_MODEL:-qwen2.5:14b}
+      - EMBEDDING_PROVIDER=${EMBEDDING_PROVIDER:-siliconflow}
+      - EMBEDDING_SILICONFLOW_API_KEY=${EMBEDDING_SILICONFLOW_API_KEY}
+      - EMBEDDING_SILICONFLOW_BASE_URL=${EMBEDDING_SILICONFLOW_BASE_URL:-https://api.siliconflow.cn/v1}
+      - EMBEDDING_SILICONFLOW_MODEL=${EMBEDDING_SILICONFLOW_MODEL:-BAAI/bge-m3}
+      - EMBEDDING_SILICONFLOW_DIMENSION=${EMBEDDING_SILICONFLOW_DIMENSION:-1024}
+      - EMBEDDING_OLLAMA_BASE_URL=${EMBEDDING_OLLAMA_BASE_URL:-http://localhost:11434}
+      - EMBEDDING_OLLAMA_MODEL=${EMBEDDING_OLLAMA_MODEL:-nomic-embed-text}
+      - EMBEDDING_OLLAMA_DIMENSION=${EMBEDDING_OLLAMA_DIMENSION:-768}
     ports:
       - "${API_PORT:-8000}:8000"
     volumes:
@@ -97,6 +105,14 @@ services:
       - OPENAI_MODEL=${OPENAI_MODEL:-gpt-4-turbo-preview}
       - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://localhost:11434}
       - OLLAMA_MODEL=${OLLAMA_MODEL:-qwen2.5:14b}
+      - EMBEDDING_PROVIDER=${EMBEDDING_PROVIDER:-siliconflow}
+      - EMBEDDING_SILICONFLOW_API_KEY=${EMBEDDING_SILICONFLOW_API_KEY}
+      - EMBEDDING_SILICONFLOW_BASE_URL=${EMBEDDING_SILICONFLOW_BASE_URL:-https://api.siliconflow.cn/v1}
+      - EMBEDDING_SILICONFLOW_MODEL=${EMBEDDING_SILICONFLOW_MODEL:-BAAI/bge-m3}
+      - EMBEDDING_SILICONFLOW_DIMENSION=${EMBEDDING_SILICONFLOW_DIMENSION:-1024}
+      - EMBEDDING_OLLAMA_BASE_URL=${EMBEDDING_OLLAMA_BASE_URL:-http://localhost:11434}
+      - EMBEDDING_OLLAMA_MODEL=${EMBEDDING_OLLAMA_MODEL:-nomic-embed-text}
+      - EMBEDDING_OLLAMA_DIMENSION=${EMBEDDING_OLLAMA_DIMENSION:-768}
     volumes:
       - ./backend:/app
     depends_on:
@@ -131,6 +147,14 @@ services:
       - OPENAI_MODEL=${OPENAI_MODEL:-gpt-4-turbo-preview}
       - OLLAMA_BASE_URL=${OLLAMA_BASE_URL:-http://localhost:11434}
       - OLLAMA_MODEL=${OLLAMA_MODEL:-qwen2.5:14b}
+      - EMBEDDING_PROVIDER=${EMBEDDING_PROVIDER:-siliconflow}
+      - EMBEDDING_SILICONFLOW_API_KEY=${EMBEDDING_SILICONFLOW_API_KEY}
+      - EMBEDDING_SILICONFLOW_BASE_URL=${EMBEDDING_SILICONFLOW_BASE_URL:-https://api.siliconflow.cn/v1}
+      - EMBEDDING_SILICONFLOW_MODEL=${EMBEDDING_SILICONFLOW_MODEL:-BAAI/bge-m3}
+      - EMBEDDING_SILICONFLOW_DIMENSION=${EMBEDDING_SILICONFLOW_DIMENSION:-1024}
+      - EMBEDDING_OLLAMA_BASE_URL=${EMBEDDING_OLLAMA_BASE_URL:-http://localhost:11434}
+      - EMBEDDING_OLLAMA_MODEL=${EMBEDDING_OLLAMA_MODEL:-nomic-embed-text}
+      - EMBEDDING_OLLAMA_DIMENSION=${EMBEDDING_OLLAMA_DIMENSION:-768}
     volumes:
       - ./backend:/app
     depends_on:
