refactor: 新闻同步架构重构，实现全市快讯(CLS)与个股新闻(东财)分表存储及自动轮询

--- a/.env.example
+++ b/.env.example
@@ -83,13 +83,11 @@ SYNC_FINANCIAL_MINUTE=0
 
 # 新闻数据清理任务
 # --------------------
-# 调度：每周一凌晨 2:00 执行
-CLEANUP_NEWS_DAY_OF_WEEK=0
+# 调度：每天凌晨 2:00 执行
 CLEANUP_NEWS_HOUR=2
 CLEANUP_NEWS_MINUTE=0
-# 策略：保留最近 90 天数据，且永远保护自选股相关新闻
-NEWS_RETENTION_DAYS=90
-NEWS_CLEANUP_PROTECT_WATCHLIST=true
+# 策略：保留最近 1 年数据，不再区分自选股。
+NEWS_RETENTION_YEARS=1
 
 # 健康检查配置
 HEALTH_CHECK_HOUR=0
