--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,9 @@ services:
       - EMBEDDING_OLLAMA_BASE_URL=${EMBEDDING_OLLAMA_BASE_URL:-http://localhost:11434}
       - EMBEDDING_OLLAMA_MODEL=${EMBEDDING_OLLAMA_MODEL:-nomic-embed-text}
       - EMBEDDING_OLLAMA_DIMENSION=${EMBEDDING_OLLAMA_DIMENSION:-768}
+      - NEWS_RETENTION_YEARS=${NEWS_RETENTION_YEARS:-1}
+      - CLEANUP_NEWS_HOUR=${CLEANUP_NEWS_HOUR:-2}
+      - CLEANUP_NEWS_MINUTE=${CLEANUP_NEWS_MINUTE:-0}
     ports:
       - "${API_PORT:-8000}:8000"
     volumes:
@@ -113,6 +116,9 @@ services:
       - EMBEDDING_OLLAMA_BASE_URL=${EMBEDDING_OLLAMA_BASE_URL:-http://localhost:11434}
       - EMBEDDING_OLLAMA_MODEL=${EMBEDDING_OLLAMA_MODEL:-nomic-embed-text}
       - EMBEDDING_OLLAMA_DIMENSION=${EMBEDDING_OLLAMA_DIMENSION:-768}
+      - NEWS_RETENTION_YEARS=${NEWS_RETENTION_YEARS:-1}
+      - CLEANUP_NEWS_HOUR=${CLEANUP_NEWS_HOUR:-2}
+      - CLEANUP_NEWS_MINUTE=${CLEANUP_NEWS_MINUTE:-0}
     volumes:
       - ./backend:/app
     depends_on:
@@ -155,6 +161,9 @@ services:
       - EMBEDDING_OLLAMA_BASE_URL=${EMBEDDING_OLLAMA_BASE_URL:-http://localhost:11434}
       - EMBEDDING_OLLAMA_MODEL=${EMBEDDING_OLLAMA_MODEL:-nomic-embed-text}
       - EMBEDDING_OLLAMA_DIMENSION=${EMBEDDING_OLLAMA_DIMENSION:-768}
+      - NEWS_RETENTION_YEARS=${NEWS_RETENTION_YEARS:-1}
+      - CLEANUP_NEWS_HOUR=${CLEANUP_NEWS_HOUR:-2}
+      - CLEANUP_NEWS_MINUTE=${CLEANUP_NEWS_MINUTE:-0}
     volumes:
       - ./backend:/app
     depends_on:
