config: update sync intervals and use env_file in docker-compose

--- a/.env.example
+++ b/.env.example
@@ -62,12 +62,12 @@ SYNC_L1_DAILY_TIME=17:30
 
 # L2 - 日内组：高频更新间隔（单位：秒）
 # 适用于：新闻资讯、自选股行情、板块异动、向量生成
-# 推荐值：300（5分钟）
+# 推荐值：60（1分钟）
 SYNC_L2_INTERVAL_SECONDS=60
 
 # L2 任务错开间隔（单位：秒）
 # 避免任务同时执行造成资源竞争
-# 推荐值：120（2分钟）
+# 推荐值：10（10秒钟）
 SYNC_L2_TASK_OFFSET_SECONDS=10
 
 # L3 - 按需组：实时数据缓存失效时间（单位：秒）
