feat: align sync layers with documentation and add integration tests

--- a/.env.example
+++ b/.env.example
@@ -56,30 +56,21 @@ EMBEDDING_SILICONFLOW_DIMENSION=1024
 
 # 分层调度策略配置
 
-# L1 - 日更组：收盘后统一同步时间（格式：HH:MM，24小时制）
-# 适用于：龙虎榜、估值、财报、宏观数据、技术指标、资金面数据
-SYNC_L1_DAILY_TIME=17:30
-
-# L2 - 日内组：高频更新间隔（单位：秒）
-# 适用于：新闻资讯、自选股行情、板块异动、向量生成
-# 推荐值：60（1分钟）
-SYNC_L2_INTERVAL_SECONDS=60
-
-# L2 任务错开间隔（单位：秒）
-# 避免任务同时执行造成资源竞争
-# 推荐值：10（10秒钟）
-SYNC_L2_TASK_OFFSET_SECONDS=10
-
-# L3 - 按需组：实时数据缓存失效时间（单位：秒）
-# 适用于：单股详情页查询
-REALTIME_CACHE_TTL=10
-
-# 特殊任务配置
-
-# 财务报表同步（默认：每周六 20:00）
+# L0 - 周更组（默认：每周六 20:00）
 SYNC_FINANCIAL_DAY_OF_WEEK=6
 SYNC_FINANCIAL_HOUR=20
 SYNC_FINANCIAL_MINUTE=0
+
+# L1 - 日更组：收盘后统一同步时间（格式：HH:MM，24小时制）
+SYNC_L1_DAILY_TIME=17:30
+
+# L2 - 日内组：高频更新间隔（单位：秒）
+SYNC_L2_INTERVAL_SECONDS=60
+# L2 任务错开间隔（单位：秒）
+SYNC_L2_TASK_OFFSET_SECONDS=10
+
+# L3 - 按需组：实时数据缓存失效时间（单位：秒）
+REALTIME_CACHE_TTL=10
 
 # 新闻数据清理任务
 # --------------------
