test: move smtp test to tests directory and finalize alerting feature

--- a/.env.example
+++ b/.env.example
@@ -87,3 +87,21 @@ HEALTH_CHECK_MINUTE=0
 # 日志配置
 LOG_LEVEL=INFO
 LOG_FORMAT=json
+
+# ==================== 邮件报警配置 (SMTP) ====================
+# 是否启用邮件报警 (True/False)
+SMTP_ENABLED=False
+# SMTP 服务器地址 (如 smtp.qq.com, smtp.gmail.com)
+SMTP_HOST=smtp.qq.com
+# SMTP 端口 (SSL 通常为 465, TLS 通常为 587)
+SMTP_PORT=465
+# SMTP 用户名 (通常是您的邮箱地址)
+SMTP_USER=your_email@example.com
+# SMTP 授权码/密码 (注意：QQ/163邮箱请使用授权码而非登录密码)
+SMTP_PASSWORD=your_smtp_auth_code
+# 发件人显示地址 (通常与 SMTP_USER 一致)
+SMTP_FROM=LeekSaver-Robot <your_email@example.com>
+# 报警接收人地址
+SMTP_TO=admin@example.com
+# 是否使用 SSL/TLS (True/False)
+SMTP_TLS=True
